# nanuquant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  mkdocs.yml  polars_metrics_implementation_plan.docx  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
benchmarks/: run_benchmarks.py
docs/: benchmarks.md  index.md  installation.md  mathematics.md  quickstart.md  testing.md  use-cases.md
docs/api/: advanced.md  core.md  institutional.md
nanuquant/: __init__.py  config.py  namespace.py  types.py
nanuquant-ts/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
nanuquant-ts/src/: config.ts  exceptions.ts  index.ts  types.ts
nanuquant-ts/src/core/: correlation.ts  distribution.ts  performance.ts  returns.ts  risk.ts  rolling.ts  timeseries.ts  utils.ts  validation.ts
nanuquant-ts/src/stats/: normal.ts
nanuquant-ts/tests/: correlation.test.ts  distribution.test.ts  helpers.ts  performance.test.ts  returns.test.ts  risk.test.ts  rolling.test.ts  timeseries.test.ts
nanuquant-ts/tests/fixtures/: generate-fixtures.py  inputs.json
nanuquant-ts/tests/fixtures/expected/: correlation.json  distribution.json  performance.json  returns.json  risk.json  rolling.json  timeseries.json
nanuquant/advanced/: trades.py
nanuquant/core/: __init__.py  distribution.py  performance.py  periods.py  returns.py  risk.py  rolling.py  timeseries.py  utils.py
nanuquant/institutional/: _helpers.py  execution.py  portfolio.py  robustness.py  systemic.py  var_extensions.py  volatility.py
nanuquant/reports/: html.py  metrics.py
nanuquant/trades/: conversion.py  equity.py  types.py  utils.py
polars_metrics/: __init__.py  _version.py  config.py  exceptions.py  namespace.py  types.py
polars_metrics/advanced/: __init__.py  trades.py
polars_metrics/core/: __init__.py  distribution.py  performance.py  periods.py  returns.py  risk.py  rolling.py  utils.py  validation.py
polars_metrics/institutional/: __init__.py  _helpers.py  execution.py  portfolio.py  robustness.py  systemic.py  var_extensions.py  volatility.py
polars_metrics/reports/: __init__.py  html.py  metrics.py
polars_metrics/trades/: __init__.py  config.py  conversion.py  equity.py  utils.py  validation.py
tests/: __init__.py  conftest.py  test_institutional_execution.py  test_institutional_portfolio.py  test_institutional_robustness.py  test_institutional_systemic.py  test_institutional_var.py  test_institutional_volatility.py  test_integration_market_data.py  test_new_metrics.py  test_reports.py  test_timeseries.py  test_trades.py  test_vs_quantstats.py
tests/.data_cache/: BND_max.parquet  QQQ_max.parquet  SPY_max.parquet
