[project]
name = "nanuquant"
dynamic = ["version"]
description = "Institutional quantitative analytics at Polars speed."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Trade Conductor" }]
keywords = [
    "polars",
    "quantitative-finance",
    "institutional-metrics",
    "backtesting",
    "trading",
    "garch",
    "risk-management"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "polars>=0.20.0",
    "scipy>=1.10.0",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/launchstack-dev/nanuquant"
Documentation = "https://launchstack-dev.github.io/nanuquant/"
Repository = "https://github.com/launchstack-dev/nanuquant"
Changelog = "https://github.com/launchstack-dev/nanuquant/blob/main/CHANGELOG.md"
Issues = "https://github.com/launchstack-dev/nanuquant/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "quantstats-lumi>=0.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "mypy>=1.8",
    "ruff>=0.4",
    "yfinance>=0.2.40",
    "pyarrow>=14.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
reports = [
    "msgspec>=0.18",
]
all = [
    "nanuquant[dev,docs,reports]",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanuquant"]

[tool.hatch.build.targets.sdist]
include = [
    "nanuquant/",
    "tests/",
    "docs/",
    "benchmarks/",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "DISCLAIMER.md",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "nanuquant/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
    "integration: marks tests that use real market data (deselect with '-m \"not integration\"')",
]

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
exclude = ["tests"]

[[tool.mypy.overrides]]
module = ["scipy.*", "arch.*"]
ignore_missing_imports = true

# Polars type stubs return overly broad union types for aggregations
# (e.g., mean() returns int | float | Decimal | date | ... instead of float)
# These modules use Polars aggregations extensively, so we relax operator/arg-type checks
[[tool.mypy.overrides]]
module = [
    "nanuquant.core.performance",
    "nanuquant.core.distribution",
    "nanuquant.core.timeseries",
    "nanuquant.core.periods",
    "nanuquant.core.returns",
    "nanuquant.core.risk",
    "nanuquant.institutional.robustness",
    "nanuquant.institutional.var_extensions",
    "nanuquant.trades.conversion",
    "nanuquant.trades.equity",
    "nanuquant.advanced.trades",
]
disable_error_code = ["operator", "arg-type"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["nanuquant/_version.py"]  # Auto-generated by hatch-vcs

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]
ignore = [
    "SIM108",   # Use ternary operator - prefer explicit if/else for readability
    "SIM102",   # Combine nested if - prefer explicit for complex conditions
    "N803",     # Argument name should be lowercase - X, F are conventional for matrices
    "N806",     # Variable name should be lowercase - X, F are conventional for matrices
    "ANN401",   # Dynamically typed expressions (Any) - needed for flexible report formatting
    "ANN001",   # Missing type annotation for function argument - tests don't need full typing
    "ANN201",   # Missing return type annotation - tests don't need full typing
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "E501", "B017", "B905", "E402", "F841"]  # Tests: relaxed typing/line/exception checks
"nanuquant/reports/html.py" = ["E501"]  # HTML/CSS templates have long lines
